<resources>
    <string name="app_name">My Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_have_account">Bạn đã có tài khoản?</string>
    <string name="label_dont_have_account">Bạn chưa có tài khoản?</string>
    <string name="label_register_success">Đăng ký tài khoản thành công</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_email_confirm">Vào mail để xác nhận đổi mật khẩu</string>
    <string name="label_confirm_logout">Bạn có chắc chắn muốn đăng xuất ?</string>
    <string name="label_confirm_delete_note">Bạn có chắc chắn muốn xóa note này ?</string>
    <string name="label_cancel">Hủy bỏ</string>
    <string name="label_accept">Đồng ý</string>
    <string name="label_edit_note">Edit Note</string>
    <string name="label_empty_note">Ghi chú bạn thêm sẽ xuất hiện tại đây</string>
    <string name="label_add_note">Add Note</string>
    <string name="label_edited">Đã chỉnh sửa</string>

    <string name="title_sign_up_account">Đăng ký tài khoản</string>
    <string name="title_login_account">Đăng nhập tài khoản</string>
    <string name="title_forgot_password">Quên mật khẩu</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_add_node">Tạo Node</string>
    <string name="title_search">Tìm kiếm note</string>

    <string name="button_login_now">Đăng nhập ngay</string>
    <string name="button_sign_up">Đăng ký</string>
    <string name="button_login">Đăng nhập</string>
    <string name="button_sign_up_now">Đăng ký ngay</string>
    <string name="button_forgot_password">Quên mật khẩu?</string>
    <string name="button_send">Gửi</string>

    <string name="hint_password">********</string>
    <string name="hint_email">Please input your email</string>
    <string name="hint_description">Ghi chú</string>
    <string name="hint_title">Tiêu đề</string>

    <string name="error_login">Tài khoản hoặc mật khẩu không đúng vui lòng thử lại</string>
    <string name="error_not_enough_email_pass">Vui lòng không để trống </string>
    <string name="error_not_enough_character">Mật khẩu phải nhiều hơn 6 kí tự</string>
    <string name="error_not_invalid_email">Định dạng Email không đúng</string>
    <string name="error_not_enough_title">Không để trống tiêu đề</string>


</resources>
