<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.henrynam.mynote.presentation.authenication.forgotpass.ForgotPasswordViewModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_small"
        android:background="@color/white">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitleLarge"
            android:text="@string/title_forgot_password"/>


        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitleNormal"
            android:text="@string/label_email"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/spacing_huge"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            style="@style/EditTextSingleLine"
            android:text="@={viewModel.forgotPassWord}"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnSend"
            style="@style/ButtonYellowRound"
            android:text="@string/button_send"
            android:onClick="@{() -> viewModel.sendForgotPass()}"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_huge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_have_account"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btnLoginNow"
                style="@style/ButtonBorderless"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"
                android:textStyle="normal"
                android:text="@string/button_login_now"/>

        </LinearLayout>

    </LinearLayout>
</layout>
